# napari-metroid

./: LICENSE  MANIFEST.in  README.md  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yml
docs/: conf.py  index.rst
src/napari_metroid/: __init__.py  _auto_mask.py  _bssd.py  _dock_widget.py  _get_signals.py  _mess.py  _remove_bleaching.py  _sample_data.py  _widgets.py  napari.yaml
src/napari_metroid/_tests/: test_dock_widget.py  test_sample_data.py  test_widget.py  test_writer.py
src/napari_metroid/_ui/: metroid_main_widget.ui
