[metadata]
name = napari-metroid
version = 0.0.1
author = Marcelo Leomil Zoccoler
author_email = marcelo.zoccoler@tu-dresden.de
url = https://github.com/zoccoler/napari-metroid
license = BSD-3-Clause
description = This napari plugin creates several regions of interest of similar area over cells in a fluorescence video (2D+time). It then gets ROIs means over time and performs signal denoising: fixes photobleaching and separates signal from noise by means of blind source separation (with or without wavelet filtering).
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/zoccoler/napari-metroid/issues
    Documentation = https://github.com/zoccoler/napari-metroid#README.md
    Source Code = https://github.com/zoccoler/napari-metroid
    User Support = https://github.com/zoccoler/napari-metroid/issues

[options]
packages = find:
include_package_data = True
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    numpy
    scikit-learn
    scikit-image
    statsmodels
    scipy

[options.packages.find]
where = src

[options.package_data]
napari-metroid =
    napari.yaml

[options.entry_points]
napari.manifest =
    napari-metroid = napari_metroid:napari.yaml
